add datasets folder

--- a/pandas_train.ipynb
+++ b/pandas_train.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('aec.csv')\n",
+    "df = pd.read_csv('../datasets/aec.csv')\n",
     "df.head()\n",
     "df['country'].nunique\n",
     "df['country'].unique\n",
