--- a/seaborn._train.ipynb
+++ b/seaborn._train.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diamonds = pd.read_csv('d.csv')"
+    "diamonds = pd.read_csv('../datasets/d.csv')"
    ]
   },
   {
