--- a/ANN_example.ipynb
+++ b/ANN_example.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = pd.read_csv('../lending_club_info.csv',index_col='LoanStatNew')"
+    "data_info = pd.read_csv('../datasets/lending_club_info.csv',index_col='LoanStatNew')"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../lending_club_loan_two.csv')"
+    "df = pd.read_csv('../datasets/lending_club_loan_two.csv')"
    ]
   },
   {
